# spielterminal

./: .gitignore  AUTHORS  ChangeLog  HACKING  INSTALL  Makefile.am  NEWS  README  README.md  autogen.sh  bootstrap  config.h  configure.ac  flymake.mk
doc/: Makefile.am  spielterminal.texi
example/: hello.scm
lib/: Makefile.am  guile_script.c  guile_script.h  info.c  info.h  user_input.c  user_input.h
m4/: ax_gcc_analyzer.m4
man/: Makefile.am
src/: Makefile.am  main.c  spielterminal.c
